# beautiful-traceback

./: .copier-answers.yml  CHANGELOG.md  Justfile  README.md  README_original.md  TODO-ai.md  local.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build_and_publish.yml
beautiful_traceback/: __init__.py  cli.py  common.py  config.py  formatting.py  hook.py  json_formatting.py  parsing.py  pytest_assertion.py  pytest_plugin.py  version.py
examples/: README.md  basic_example.py  chained_exceptions.py  comparison.py  demo.py  fastapi_demo.py  json_demo.py  logging_example.py  simple.py  threading_example.py
pretty-traceback/: .git-custom-branch  README.md  setup.py  tODO
pretty-traceback/.github/workflows/: ci.yml
pretty-traceback/src/pretty_traceback/: formatting.py  hook.py  parsing.py  pytest_plugin.py
tests/: fixtures.py  test_configure.py  test_formatting.py  test_import.py  test_infinite_loop.py  test_json_formatting.py  test_logging_formatter.py  test_parsing.py  test_pytest_plugin.py  test_threading_hook.py
